<?xml version="1.0" encoding="utf-8"?>
<TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tvError"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_error_banner"
    android:fontFamily="@font/plus_jakarta_sans"
    android:padding="@dimen/spacing_3"
    android:textColor="@color/ll_destructive"
    android:textSize="13sp"
    android:visibility="gone" />
