...
                    layout="@layout/include_error_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    style="@style/Widget.LaundryLink.Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:text="Create Account" />

...
